First implementation of approved for courses, TODO: Add endpoints to add correlatives to a course + do the proper checks regarding enrollment
