# src/endpoints/user_endpoints.py
@@ -2,7 +2,7 @@ from flask import Blueprint, request
 
 from src.error.error import error_generator
 from src.headers import MISSING_FIELDS
-from services import service_courses, logger
+from services import service_courses, service_users, logger
 
 courses_enrollment_bp = Blueprint("courses_enrollment", __name__, url_prefix="/courses")
 
@@ -57,5 +57,41 @@ def get_enrolled_courses(student_id=None):
     logger.debug(f"[APP] Getting all courses for student with ID: {student_id}")
     # Call the service to get all courses
     result = service_courses.get_enrolled_courses(student_id)
+
+    return result["response"], result["code_status"]
+
+
+users_approvation_bp = Blueprint("users_approve", __name__, url_prefix="/courses")
+
+# This method is for setting a user as approved
+@courses_enrollment_bp.route("/<string:course_id>/approve", methods=["POST"])
+def approve_student(course_id=None):
+    """
+    Approve a student in a course.
+    """
+
+    if not course_id:
+        error = error_generator(
+            MISSING_FIELDS, "Course ID is required", 400, "approve_student"
+        )
+        return error["response"], error["code_status"]
+
+    # Get data from request
+    data = request.json
+
+    # Check if the student_id is in the request
+    if "student_id" not in data:
+        return error_generator(
+            MISSING_FIELDS, "Student ID is required", 400, "approve_student"
+        )
+
+    # Get the student_id from the request
+    student_id = data["student_id"]
+
+    logger.debug(
+        f"[APP] Approving student with ID: {student_id} in course with ID: {course_id}"
+    )
+    # Call the service to approve the student
+    result = service_users.approve_student_in_course(course_id, student_id)
 
     return result["response"], result["code_status"]
